--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "iot-api",
   "version": "1.0.0",
   "dependencies": {
-    "node-fetch": "^2.6.9"
+    "node-fetch": "^2.6.9",
+    "@azure/data-tables": "^13.2.0"
   }
 }
